# dailytide-community-edition

./: README.md
ai-news-pipeline/: README.md  template.env
ai-news-pipeline/dailytide/: utils.py
ai-news-pipeline/dailytide/core/: genai_functions.py  pre_processing.py
ai-news-pipeline/dailytide/data_getters/: __init__.py  hackernews.py  news.py  reddit.py
ai-news-pipeline/dailytide/db/: articles.py  categories.py  topics.py
ai-news-pipeline/scripts/: display_results.py  extract_data.py  ingest_articles.py  ingest_topics.py
ai-news-pipeline/tests/: test_utils.py
backend/: .env.example  .gitignore  .prettierrc  Dockerfile.development  README.md  constants.ts  custom.d.ts  package-lock.json  package.json  server.ts  tsconfig.json  webpack.config.ts
backend/src/Configs/: index.ts  (+2 more)
data-ai-summarization/: .gitignore  .pre-commit-config.yaml  pyproject.toml
data-ai-summarization/.github/workflows/: daily_insight.yml  display_results.yml  extract_data.yml
data-ai-summarization/dailytide/: config.py
data-ai-summarization/dailytide/core/: filtering.py  topics.py
data-ai-summarization/dailytide/data_getters/: twitter.py
data-ai-summarization/dailytide/db/: session.py
data-ai-summarization/dailytide/models/: __init__.py  data_models.py
data-ai-summarization/scripts/: generate_topics.py  post_processing.py
frontend/: .env.example  .eslintrc.json  .gitignore  Dockerfile.dev  README.md  constants.ts  entrypoint.sh  jest.config.mjs  next-auth.d.ts  next.config.js  package-lock.json  package.json  plopfile.js  tsconfig.json
frontend/.storybook/: main.ts
(+203 files in other folders)
